# ChessGame

./: Bishop.cpp  Bishop.h  Board.cpp  Board.h  BoardData.cpp  BoardData.h  CMakeLists.txt  CMakeLists.txt.user.1158280  GameController.cpp  GameController.h  King.cpp  King.h  Knight.cpp  Knight.h  Move.cpp  Move.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Point.cpp  Point.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  resource.qrc
ChessGame/: Board.cpp  Board.h  Board.ui  CMakeLists.txt  Pieza.cpp  Pieza.h  Reina.cpp  Reina.cpp.autosave  Reina.h  Resource.qrc  mainwindow.ui
build-ChessGame-Desktop_Qt_5_12_9_GCC_64bit-Debug/: CMakeCache.txt  ChessGame  ChessGame.cbp  Makefile  cmake_install.cmake  qtcsettings.cmake
build-ChessGame-Desktop_Qt_5_12_9_GCC_64bit-Debug/.cmake/api/v1/reply/: cache-v2-48345b675180db4dc66f.json  cmakeFiles-v1-275f7a7cc8b2544ab27f.json  cmakeFiles-v1-55b78416426a4aaa580e.json  codemodel-v2-695e250f85bf7257bb23.json  codemodel-v2-6967cec8b1c104aebf3b.json  codemodel-v2-8159bd0fec66843e9071.json  index-2020-10-21T17-51-03-0110.json  index-2020-10-23T04-20-24-0742.json  index-2020-10-23T04-53-00-0431.json  target-ChessGame-Debug-8ffc889cc898a1e2ce29.json  target-ChessGame-Debug-9f88f4224383f3518d8b.json  target-ChessGame-Debug-e3f17e37899253032706.json  target-ChessGame_autogen-Debug-25f86885c4d4c70f1f8b.json
build-ChessGame-Desktop_Qt_5_12_9_GCC_64bit-Debug/ChessGame_autogen/: mocs_compilation.cpp
build-ChessGame-Desktop_Qt_5_12_9_GCC_64bit-Debug/ChessGame_autogen/EWIEGA46WW/: moc_Board.cpp  moc_Pieza.cpp  qrc_Resource.cpp
build-ChessGame-Desktop_Qt_5_12_9_GCC_64bit-Debug/ChessGame_autogen/include/: ui_Board.h  ui_mainwindow.h
